# xcvm-hackathon

./: .dockerignore  .gitignore  .gitmodules  DEMO_ACCOUNTS.txt  README.md  SPEC.md  docker-compose.yml  go.sh  package-lock.json  package.json  relayer.dockerfile  start-relayer.sh  xcvm-hackathon.code-workspace
.devcontainer/: Dockerfile  (+1 more)
relayer/: .env  Cargo.toml  build.rs  expanded.rs  flake.nix
relayer/metadata/: metadata.scale
relayer/metadata/databases/: databases.yaml
relayer/migrations/relayer/1652099368052_create_table_public_queue/: down.sql  up.sql
relayer/migrations/relayer/1652270118203_alter_table_public_queue_add_column_locked/: down.sql  up.sql
relayer/migrations/relayer/1652270128332_alter_table_public_queue_add_column_handled/: down.sql  up.sql
relayer/migrations/relayer/1652271076156_create_table_public_processed_blocks/: down.sql  up.sql
relayer/migrations/relayer/1654024232017_create_table_public_network/: down.sql  up.sql
relayer/migrations/relayer/1654024502910_create_table_public_transfer/: down.sql  up.sql
relayer/migrations/relayer/1654024592446_insert_into_public_network/: down.sql  up.sql
relayer/migrations/relayer/1654024756021_create_table_public_transfer_done/: down.sql  up.sql
relayer/migrations/relayer/1654167819114_create_table_public_transfer_locked/: down.sql  up.sql
relayer/migrations/relayer/1654168299846_alter_table_public_transfer_add_column_created/: down.sql  up.sql
relayer/src/: abi.rs  dali.rs  egress.rs  ingress.rs  main.rs  storage.rs  worker.rs
relayer/src/ingress/: dali.rs  eth.rs
(+101 files in other folders)
