[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.53"
futures-core = "0.3.21"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.8"
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "tls",
    "offline",
    "postgres",
    "time",
    "json",
] }
anyhow = "1.0.57"
futures-util = "0.3.21"
rand = { version = "0.8.5", features = ["small_rng"] }
futures = "0.3.21"
bytes = "1.1.0"
log = "0.4.17"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
async-stream = "0.3.3"
structopt = { version = "0.3", default-features = false }
ethers = { version = "0.6.2", features = ["legacy"] }
serde_json = "1.0.81"
sp-keyring = "6.0.0"
hex = "0.4"
either = "1.6"
subxt = { git = "https://github.com/hussein-aitlahcen/subxt", rev = "0247a28ccc9f31eddfd35362a7c642488f8f53e8" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
xcvm-core = { git = "https://github.com/ComposableFi/composable", rev = "b24a427755b8b4fc989d267cb144e602fba3122c", features = [
    "std",
] }
